--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ ubuntu-xenial-16.04-cloudimg-console.log
 venv/
 __pycache__/
 config/ansible/site.retry
+config/ansible/vars.yml
+djangosite/home/migrations/
