--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -10,20 +10,60 @@ pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
 
 
+; ==================================
+;  celery section annotated
+; ==================================
+; notes from:  https://gist.github.com/mau21mau/9371a95b7c14ddf7000c1827b7693801
+
+; the name of your supervisord program
 [program:celeryd]
-; command with the bin preceding
+
+; command full path with the virtualenv bin preceding
 command=/vagrant/venv/bin/celery -A djangosite worker -l info
 
 ; directory where manual command would have been run, django proj
 directory=/vagrant
 
-; additional celeryd config
+; If supervisord is run as the root user, switch users to this UNIX user account
+; before doing any processing.
+; user=foo
+
+; Supervisor will start as many instances of this program as named by numprocs
+; numprocs=1
+
+; Put process stdout output in this file
 stdout_logfile=/vagrant/logs/celeryd.log
+
+; Put process stderr output in this file
 stderr_logfile=/vagrant/logs/celeryd.log
+
+; If true, this program will start automatically when supervisord is started
 autostart=true
+
+; May be one of false, unexpected, or true. If false, the process will never
+; be autorestarted. If unexpected, the process will be restart when the program
+; exits with an exit code that is not one of the exit codes associated with this
+; process’ configuration (see exitcodes). If true, the process will be
+; unconditionally restarted when it exits, without regard to its exit code.
 autorestart=true
+
+; The total number of seconds which the program needs to stay running after
+; a startup to consider the start successful.
 startsecs=10
+
+; Need to wait for currently executing tasks to finish at shutdown.
+; Increase this if you have very long running tasks.
 stopwaitsecs=600
+
+; When resorting to send SIGKILL to the program to terminate it
+; send SIGKILL to its whole process group instead,
+; taking care of its children as well.
+killasgroup=true
+
+; if your broker is supervised, set its priority higher
+; so it starts first
+; priority=998
+
 
 
 
