--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,5 +1,7 @@
 ; supervisor config file
 
+; http://www.onurguzel.com/supervisord-restarting-and-reloading/
+
 [unix_http_server]
 file=/var/run/supervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
@@ -8,6 +10,8 @@ chmod=0700                       ; sockef file mode (default 0700)
 logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
+
+
 
 
 ; ==================================
@@ -26,7 +30,7 @@ directory=/vagrant
 
 ; If supervisord is run as the root user, switch users to this UNIX user account
 ; before doing any processing.
-; user=foo
+user=celery
 
 ; Supervisor will start as many instances of this program as named by numprocs
 ; numprocs=1
@@ -63,6 +67,30 @@ killasgroup=true
 ; if your broker is supervised, set its priority higher
 ; so it starts first
 ; priority=998
+
+
+
+
+; ==================================
+;  celery beat
+; ==================================
+
+; the name of your supervisord program
+[program:celerybeatd]
+
+; command full path with the virtualenv bin preceding
+command=/vagrant/venv/bin/celery -A djangosite beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+
+; directory where manual command would have been run, django proj
+directory=/vagrant
+user=celery
+stdout_logfile=/vagrant/logs/celerybeatd.log
+stderr_logfile=/vagrant/logs/celerybeatd.log
+autostart=true
+autorestart=true
+startsecs=10
+stopwaitsecs=600
+killasgroup=true
 
 
 
