yaml edits to support README project setup

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ ubuntu-xenial-16.04-cloudimg-console.log
 ###################
 venv/
 __pycache__/
-config/ansible/site.retry
+*.retry
 config/ansible/vars.yml
 djangosite/home/migrations/
 logs/
