--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -2,15 +2,15 @@
 
 ; http://www.onurguzel.com/supervisord-restarting-and-reloading/
 
-[unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
-chmod=0700                       ; sockef file mode (default 0700)
+; [unix_http_server]
+; file=/var/run/supervisor.sock   ; (the path to the socket file)
+; chmod=0700                       ; sockef file mode (default 0700)
 
 [supervisord]
 logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
-
+user=root
 
 
 
@@ -23,10 +23,10 @@ childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEM
 [program:celeryd]
 
 ; command full path with the virtualenv bin preceding
-command=/vagrant/venv/bin/celery -A djangosite worker -l info
+command=/home/ubuntu/jobpost_data/venv/bin/celery -A djangosite worker -l info
 
 ; directory where manual command would have been run, django proj
-directory=/vagrant
+directory=/home/ubuntu/jobpost_data
 
 ; If supervisord is run as the root user, switch users to this UNIX user account
 ; before doing any processing.
@@ -36,10 +36,10 @@ user=celery
 ; numprocs=1
 
 ; Put process stdout output in this file
-stdout_logfile=/vagrant/logs/celeryd.log
+stdout_logfile=/home/ubuntu/jobpost_data/log/celeryd.log
 
 ; Put process stderr output in this file
-stderr_logfile=/vagrant/logs/celeryd.log
+stderr_logfile=/home/ubuntu/jobpost_data/log/celeryd.log
 
 ; If true, this program will start automatically when supervisord is started
 autostart=true
@@ -79,13 +79,13 @@ killasgroup=true
 [program:celerybeatd]
 
 ; command full path with the virtualenv bin preceding
-command=/vagrant/venv/bin/celery -A djangosite beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+command=/home/ubuntu/jobpost_data/venv/bin/celery -A djangosite beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler --pidfile=/tmp/celerybeatd.pid
 
 ; directory where manual command would have been run, django proj
-directory=/vagrant
+directory=/home/ubuntu/jobpost_data
 user=celery
-stdout_logfile=/vagrant/logs/celerybeatd.log
-stderr_logfile=/vagrant/logs/celerybeatd.log
+stdout_logfile=/home/ubuntu/jobpost_data/log/celerybeatd.log
+stderr_logfile=/home/ubuntu/jobpost_data/log/celerybeatd.log
 autostart=true
 autorestart=true
 startsecs=10
