adding tracking of all running tasks, and separate display of auto and manual tasks... update UI with navbar and links

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -23,7 +23,7 @@ user=root
 [program:celeryd]
 
 ; command full path with the virtualenv bin preceding
-command=/home/ubuntu/jobpost_data/venv/bin/celery -A djangosite worker -l info
+command=/home/ubuntu/jobpost_data/venv/bin/celery -A djangosite worker --loglevel=INFO --concurrency=3
 
 ; directory where manual command would have been run, django proj
 directory=/home/ubuntu/jobpost_data
