--- a/config/ansible/vars.yml
+++ b/config/ansible/vars.yml
@@ -1,7 +1,7 @@
 ---
 
-secret_key: j5k@dhwaJf4J)JHRNV*F8kJ4bg8ER7J%*%<S-F5>^GHH@%*Y$@
+secret_key: your-long-key-here
 
 postgres_name: jobpost_data
 postgres_user: django
-postgres_pw: 85I7A1SjZy4q 
+postgres_pw: your-password-here
